# market_analysis_dashboard

./: .gitignore  AGENTS.md  main.py  pyproject.toml
app/: __init__.py  config.py
app/data/: __init__.py  price_fetcher.py
app/metrics/: __init__.py  calculator.py
app/ui/: controls.py  dashboard.py  metric_cards.py
app/ui/charts/: entry_events.py  pe_buckets.py  pe_timeline.py  pe_vs_returns.py
