[project]
name = "market-analysis-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.4.2,<25",
    "isort>=8.0.1",
    "jupyter>=1.0.0,<2",
    "matplotlib>=3.8.4",
    "numpy>=1.26.4,<2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2,<3",
    "panel>=1.4.5",
    "yfinance>=1.2.0",
    "bokeh>=3.3,<4",
    "pyarrow",
]
